test(product): add web layer tests for product package